--- a/templates/index.html
+++ b/templates/index.html
@@ -9,24 +9,24 @@
 </head>
 <body  class="bg-[rgb(30,30,30)] text-[rgb(255,255,255)]">
     <main id="home" class="h-screen">
-        <header class="flex justify-evenly items-center  p-3 h-24 fixed top-0 right-0 left-0 z-[100] bg-transparent bg-opacity-100">
+        <header class="flex justify-evenly items-center  p-3 h-24 fixed top-0 right-0 left-0 z-[100] bg-transparent bg-opacity-100 sm:flex sm:justify-start md:justify-start">
             <img class="w-28 h-8" src="../templates/images/natad.png" alt="">
-            <nav class="text-[rgb(255,255,255)] list-none flex gap-10 font-bold text-xl">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#service">Services</a>
-                <a href="#projects">Projects</a>
+            <nav class="text-[rgb(255,255,255)] list-none flex gap-10 font-bold text-xl md:hidden">
+                <a class="pt-1 pb-1 pl-4 pr-4 delay-500" href="#home">Home</a>
+                <a class="pt-1 pb-1 pl-4 pr-4 delay-500" href="#about">About</a>
+                <a class="pt-1 pb-1 pl-4 pr-4 delay-500" href="#service">Services</a>
+                <a class="pt-1 pb-1 pl-4 pr-4 delay-500" href="#projects">Projects</a>
             </nav>
         </header>
-        <div class="grid grid-cols-2 pt-32 place-items-center lg:grid-cols-1 sm:mt-32">
-            <div class="pl-16 w-3/4">
+        <div class="grid grid-cols-2 pt-32 place-items-center lg:grid-cols-1 sm:mt-32 lg:mt-32 md:mt-32">
+            <div class="pl-16 w-3/4 md:text-center sm:pl-0">
                 <h1 class="font-mono text-4xl w-[full] font-extrabold md:text-center lg:text-center ">Hi, My Name is Terence I <span class="text-[rgb(0,173,181)]">design</span> and <span class="text-amber-500">build </span>things on web.</h1>
                 <p class="mt-5 md:text-center lg:text-center">
                      I’m a Front-end Developer and UI/UX designer based in Philippines.
                 </p>
             </div>
             <div>
-                <img class="md:hidden lg:hidden" src="../templates/images/man.png" alt="">
+                <img class="md:hidden lg:hidden sm:hidden" src="../templates/images/man.png" alt="">
             </div>
            
         </div>
@@ -40,7 +40,7 @@
 
        <div class="flex justify-evenly mr-32 ml-32 sm:m-0">
         <div class="grid grid-cols-2 place-items-center items-center justify-center mt-20 md:grid-cols-1 sm:grid-cols-1 gap-10 lg:grid-cols-1">
-            <div class="text-sm sm:text-center lg:text-center">
+            <div class="text-sm sm:text-center lg:text-center sm:pl-8 sm:pr-8">
                 <p class="w-full">
                     Hi Everyone! My name is Terence Dave Natad,  a BSIT student of WMSU based in the Philippines. 
                     I am currently focusing in HTML, CSS and Javascript as my core programming language.
@@ -54,7 +54,7 @@
             <div class="">
                 <img class="h-[20rem]" src="../templates/images/laptop.png" alt="">
             </div>
-            <div class="grid grid-cols-3 gap-4 sm:grid-cols-2 xl:flex flex-shrink-0">
+            <div class="grid grid-cols-3 gap-4 sm:flex-col  xl:flex flex-shrink-0">
                 <div class="bg-[rgb(24,23,23)] pl-10 pr-10 pb-10 text-center">
                     <h5 class="font-semibold text-xl mt-5">Experience</h5>
                     <h4 class="font-extrabold text-4xl mt-4">+ 0</h4>
@@ -85,25 +85,25 @@
                 </div>
                 
                 <div class="grid grid-cols-3 gap-8 pt-8 sm:grid-cols-2">
-                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 ">
+                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 cursor-pointer transform transition-transform ease-in-out duration-300 hover:scale-105">
                         <div class="h-10 w-20">
                             <img class="h-full w-full" src="../templates/images/html.png" alt="">
                         </div>
                         <p class="w-full text-center font-semibold">HTML</p>
                     </div>
-                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 ">
+                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 cursor-pointer transform transition-transform ease-in-out duration-300 hover:scale-105">
                         <div class="h-10 w-20">
                             <img class="h-full w-full" src="../templates/images/social.png" alt="">
                         </div>
                         <p class="w-full text-center font-semibold">CSS</p>
                     </div>
-                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 ">
+                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 cursor-pointer transform transition-transform ease-in-out duration-300 hover:scale-105">
                         <div class="h-10 w-20">
                             <img class="h-full w-full" src="../templates/images/java-script.png" alt="">
                         </div>
                         <p class="w-full text-center font-semibold">JavaScript</p>
                     </div>
-                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 ">
+                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 cursor-pointer transform transition-transform ease-in-out duration-300 hover:scale-105">
                         <div class="h-10 w-20">
                             <img class="h-full w-full" src="../templates/images/tailwind.png" alt="">
                         </div>
@@ -118,13 +118,13 @@
                 </div>
                 
                 <div class="grid grid-cols-2 gap-8 pt-8">
-                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 ">
+                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 cursor-pointer transform transition-transform ease-in-out duration-300 hover:scale-105">
                         <div class="h-10 w-20">
                             <img class="h-full w-full" src="../templates/images/figma.png" alt="">
                         </div>
                         <p class="w-full text-center font-semibold">Figma</p>
                     </div>
-                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 ">
+                    <div class="border-[rgb(238,238,238)] border-2 rounded-lg flex items-center pt-2 pb-2 pl-4 pr-4 cursor-pointer transform transition-transform ease-in-out duration-300 hover:scale-105">
                         <div class="h-10 w-20">
                             <img class="h-full w-full" src="../templates/images/canva.jpg" alt="">
                         </div>
@@ -183,7 +183,7 @@
             <h1 class="text-3xl text-center font-bold">My <span class="text-[rgb(0,173,181)]">Projects</span></h1>
             <div class="flex justify-evenly pl-10 pr-10">
                 <div class="grid grid-cols-3 gap-10 mt-10 md:grid-cols-2 sm:grid-cols-1">
-                    <div class="bg-[rgb(44,44,44)] rounded-lg pl-4 pr-4 pb-8">
+                    <div class="bg-[rgb(44,44,44)] rounded-lg pl-4 pr-4 pb-8 cursor-pointer transform transition-transform ease-in-out duration-300 hover:scale-105">
                         <div class="grid grid-rows-1 place-items-center mt-8">
                             <img class="rounded-lg h-full" src="../templates/images/movie.png" alt="">
                         </div>
@@ -193,7 +193,7 @@
                             <a class="w-28"  href="" target="_blank" class="text-sm font-extrabold">See project <span class="text-[rgb(255,111,97)]">&#8594</span></a>
                         </div>
                     </div>
-                    <div class="bg-[rgb(44,44,44)] rounded-lg pl-4 pr-4 pb-8">
+                    <div class="bg-[rgb(44,44,44)] rounded-lg pl-4 pr-4 pb-8 cursor-pointer transform transition-transform ease-in-out duration-300 hover:scale-105">
                         <div class="grid grid-rows-1 place-items-center mt-8">
                             <img class="rounded-lg h-full" src="../templates/images/movie.png" alt="">
                         </div>
@@ -203,7 +203,7 @@
                             <a class="w-28"  href="" target="_blank" class="text-sm font-extrabold">See project <span class="text-[rgb(255,111,97)]">&#8594</span></a>
                         </div>
                     </div>
-                    <div class="bg-[rgb(44,44,44)] rounded-lg pl-4 pr-4 pb-8">
+                    <div class="bg-[rgb(44,44,44)] rounded-lg pl-4 pr-4 pb-8 cursor-pointer transform transition-transform ease-in-out duration-300 hover:scale-105">
                         <div class="grid grid-rows-1 place-items-center mt-8">
                             <img class="rounded-lg h-full" src="../templates/images/movie.png" alt="">
                         </div>
@@ -237,23 +237,23 @@
                 <div class="grid grid-cols-2 justify-evenly gap-y-11 gap-x-16 lg:grid-cols-1 lg:gap-x-1 sm:gap-2 md:gap-2 xl:gap-3">
                     <div class="bg-[rgba(255,216,99,0.27)] h-20 w-56 grid grid-rows place-items-center rounded-lg">
                         <h2 class="font-bold">Send me an email here <span class="">&darr;</span></h2>
-                        <a class="font-semibold bg-slate-800 rounded-lg w-36 h-8 text-center" href="mailto:terencedavenatad@gmail.com">
+                        <a class="font-semibold bg-slate-800 rounded-lg w-36 h-8 text-center flex justify-center items-center hover:bg-[rgb(255,111,97)] hover:scale-105" href="mailto:terencedavenatad@gmail.com">
                             Mail Me
                         </a>
                     </div>
                     <div class="bg-[rgba(255,216,99,0.27)] h-20 w-56 grid grid-rows place-items-center rounded-lg">
                         <h2 class="font-bold">Download my CV here <span class="">&darr;</span></h2>
-                        <a class="font-semibold bg-slate-800 rounded-lg w-36 h-8 text-center" href="path/to.your-cv.pdf" download="">
+                        <a class="font-semibold bg-slate-800 rounded-lg w-36 h-8 text-center flex justify-center items-center hover:bg-[rgb(255,111,97)] hover:scale-105" href="path/to.your-cv.pdf" download="">
                             Download CV
                         </a>
                     </div>
                     <div class="bg-[rgba(255,216,99,0.27)] h-20 w-56 grid grid-rows place-items-center rounded-lg">
                         <h2 class="font-bold">Contact with me here <span class="">&darr;</span></h2>
-                        <a class="font-semibold bg-slate-800 rounded-lg w-36 h-8 text-center" href=tel:+9657363643>Contact Me</a>
+                        <a class="font-semibold bg-slate-800 rounded-lg w-36 h-8 text-center flex justify-center items-center hover:bg-[rgb(255,111,97)] hover:scale-105" href=tel:+9657363643>Contact Me</a>
                     </div>
                     <div class="bg-[rgba(255,216,99,0.27)] h-20 w-56 grid grid-rows place-items-center rounded-lg">
                         <h2 class="font-bold">My Socials here <span class="">&darr;</span></h2>
-                        <div class="grid grid-cols-4 gap-2 bg-slate-800 rounded-lg w-36 h-8 place-items-center">
+                        <div class="grid grid-cols-4 gap-2 bg-slate-800 rounded-lg w-36 h-8 place-items-center ">
                             <a  href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                             <a  href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
                             <a  href="https://www.github.com" target="_blank"><i class="fab fa-github"></i></a>
