--- a/templates/output.css
+++ b/templates/output.css
@@ -558,6 +558,18 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -570,60 +582,56 @@ video {
   top: 0px;
 }
 
-.z-\[100\] {
-  z-index: 100;
+.z-30 {
+  z-index: 30;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .m-0 {
   margin: 0px;
 }
 
-.ml-10 {
-  margin-left: 2.5rem;
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
-.ml-32 {
-  margin-left: 8rem;
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+.ml-20 {
+  margin-left: 5rem;
 }
 
 .ml-4 {
   margin-left: 1rem;
 }
 
-.mr-10 {
-  margin-right: 2.5rem;
+.mr-1 {
+  margin-right: 0.25rem;
 }
 
-.mr-32 {
-  margin-right: 8rem;
+.mr-20 {
+  margin-right: 5rem;
 }
 
-.mt-10 {
-  margin-top: 2.5rem;
+.mr-4 {
+  margin-right: 1rem;
 }
 
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mt-20 {
-  margin-top: 5rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mt-40 {
-  margin-top: 10rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
 }
 
 .mt-8 {
@@ -638,36 +646,36 @@ video {
   display: grid;
 }
 
-.h-10 {
-  height: 2.5rem;
+.h-0 {
+  height: 0px;
 }
 
 .h-20 {
   height: 5rem;
 }
 
-.h-24 {
-  height: 6rem;
+.h-5 {
+  height: 1.25rem;
 }
 
 .h-8 {
   height: 2rem;
 }
 
-.h-80 {
-  height: 20rem;
+.h-\[10rem\] {
+  height: 10rem;
 }
 
 .h-\[20rem\] {
   height: 20rem;
 }
 
-.h-\[25rem\] {
-  height: 25rem;
-}
-
 .h-\[30rem\] {
   height: 30rem;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .h-full {
@@ -678,52 +686,44 @@ video {
   height: 100vh;
 }
 
-.w-20 {
-  width: 5rem;
+.w-1\/3 {
+  width: 33.333333%;
 }
 
-.w-28 {
-  width: 7rem;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-3\/4 {
-  width: 75%;
+.w-8 {
+  width: 2rem;
 }
 
-.w-36 {
-  width: 9rem;
+.w-\[10rem\] {
+  width: 10rem;
 }
 
-.w-56 {
-  width: 14rem;
-}
-
-.w-\[40rem\] {
-  width: 40rem;
-}
-
-.w-\[full\] {
-  width: full;
+.w-auto {
+  width: auto;
 }
 
 .w-full {
   width: 100%;
 }
 
+.max-w-2xl {
+  max-width: 42rem;
+}
+
 .flex-shrink-0 {
   flex-shrink: 0;
 }
 
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.shrink-0 {
+  flex-shrink: 0;
 }
 
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.list-none {
-  list-style-type: none;
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-2 {
@@ -738,20 +738,24 @@ video {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-rows-1 {
-  grid-template-rows: repeat(1, minmax(0, 1fr));
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row {
   flex-direction: row;
 }
 
-.flex-col {
-  flex-direction: column;
-}
-
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.flex-nowrap {
+  flex-wrap: nowrap;
 }
 
 .place-items-center {
@@ -766,181 +770,290 @@ video {
   justify-content: center;
 }
 
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
+}
+
 .justify-evenly {
   justify-content: space-evenly;
-}
-
-.gap-10 {
-  gap: 2.5rem;
-}
-
-.gap-12 {
-  gap: 3rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .gap-4 {
   gap: 1rem;
 }
 
-.gap-5 {
-  gap: 1.25rem;
-}
-
 .gap-8 {
   gap: 2rem;
 }
 
-.gap-x-16 {
-  -moz-column-gap: 4rem;
-       column-gap: 4rem;
+.space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.gap-y-11 {
-  row-gap: 2.75rem;
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2rem * var(--tw-space-x-reverse));
+  margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .scroll-smooth {
   scroll-behavior: smooth;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.border {
+  border-width: 1px;
 }
 
 .border-2 {
   border-width: 2px;
 }
 
-.border-\[rgb\(238\2c 238\2c 238\)\] {
+.border-none {
+  border-style: none;
+}
+
+.border-cyan-600 {
   --tw-border-opacity: 1;
-  border-color: rgb(238 238 238 / var(--tw-border-opacity));
+  border-color: rgb(8 145 178 / var(--tw-border-opacity));
 }
 
-.bg-\[rgb\(0\2c 173\2c 181\)\] {
+.bg-\[rgb\(0\2c 15\2c 41\)\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 173 181 / var(--tw-bg-opacity));
+  background-color: rgb(0 15 41 / var(--tw-bg-opacity));
 }
 
-.bg-\[rgb\(24\2c 23\2c 23\)\] {
+.bg-\[rgb\(0\2c 21\2c 56\)\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(24 23 23 / var(--tw-bg-opacity));
+  background-color: rgb(0 21 56 / var(--tw-bg-opacity));
 }
 
-.bg-\[rgb\(30\2c 30\2c 30\)\] {
+.bg-\[rgb\(1\2c 27\2c 70\)\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(30 30 30 / var(--tw-bg-opacity));
+  background-color: rgb(1 27 70 / var(--tw-bg-opacity));
 }
 
-.bg-\[rgb\(38\2c 37\2c 37\)\] {
+.bg-black {
   --tw-bg-opacity: 1;
-  background-color: rgb(38 37 37 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-\[rgb\(44\2c 44\2c 44\)\] {
+.bg-sky-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(44 44 44 / var(--tw-bg-opacity));
-}
-
-.bg-\[rgba\(255\2c 216\2c 99\2c 0\.27\)\] {
-  background-color: rgba(255,216,99,0.27);
-}
-
-.bg-amber-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 158 11 / var(--tw-bg-opacity));
-}
-
-.bg-slate-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
 }
 
 .bg-transparent {
   background-color: transparent;
 }
 
-.bg-opacity-100 {
-  --tw-bg-opacity: 1;
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.from-\[rgb\(0\2c 0\2c 42\)\] {
+  --tw-gradient-from: rgb(0,0,42) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 42 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[rgb\(0\2c 21\2c 56\)\] {
+  --tw-gradient-from: rgb(0,21,56) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 21 56 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[rgb\(1\2c 27\2c 70\)\] {
+  --tw-gradient-from: rgb(1,27,70) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(1 27 70 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.via-\[rgb\(1\2c 27\2c 70\)\] {
+  --tw-gradient-to: rgb(1 27 70 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), rgb(1,27,70) var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.to-\[rgb\(0\2c 0\2c 42\)\] {
+  --tw-gradient-to: rgb(0,0,42) var(--tw-gradient-to-position);
+}
+
+.to-\[rgb\(0\2c 21\2c 56\)\] {
+  --tw-gradient-to: rgb(0,21,56) var(--tw-gradient-to-position);
+}
+
+.to-\[rgb\(1\2c 27\2c 70\)\] {
+  --tw-gradient-to: rgb(1,27,70) var(--tw-gradient-to-position);
 }
 
 .p-0 {
   padding: 0px;
 }
 
-.p-3 {
-  padding: 0.75rem;
+.p-20 {
+  padding: 5rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-1 {
   padding-bottom: 0.25rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
+.pb-20 {
+  padding-bottom: 5rem;
 }
 
-.pb-12 {
-  padding-bottom: 3rem;
+.pb-36 {
+  padding-bottom: 9rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
-.pb-28 {
-  padding-bottom: 7rem;
+.pb-40 {
+  padding-bottom: 10rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 
 .pb-8 {
   padding-bottom: 2rem;
 }
 
-.pb-80 {
-  padding-bottom: 20rem;
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
-.pl-10 {
-  padding-left: 2.5rem;
+.pl-20 {
+  padding-left: 5rem;
 }
 
-.pl-16 {
-  padding-left: 4rem;
+.pl-3 {
+  padding-left: 0.75rem;
 }
 
 .pl-4 {
   padding-left: 1rem;
 }
 
-.pr-10 {
-  padding-right: 2.5rem;
+.pl-8 {
+  padding-left: 2rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pr-20 {
+  padding-right: 5rem;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
 }
 
 .pr-4 {
   padding-right: 1rem;
 }
 
+.pr-8 {
+  padding-right: 2rem;
+}
+
 .pt-1 {
   padding-top: 0.25rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
+.pt-20 {
+  padding-top: 5rem;
 }
 
-.pt-28 {
-  padding-top: 7rem;
+.pt-36 {
+  padding-top: 9rem;
 }
 
-.pt-32 {
-  padding-top: 8rem;
+.pt-4 {
+  padding-top: 1rem;
 }
 
-.pt-48 {
-  padding-top: 12rem;
+.pt-40 {
+  padding-top: 10rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
 }
 
 .pt-8 {
@@ -951,8 +1064,21 @@ video {
   text-align: center;
 }
 
-.font-mono {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+.text-justify {
+  text-align: justify;
+}
+
+.indent-10 {
+  text-indent: 2.5rem;
+}
+
+.font-dmsans {
+  font-family: DM sans;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl {
@@ -965,8 +1091,8 @@ video {
   line-height: 2.5rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
+.text-9xl {
+  font-size: 8rem;
   line-height: 1;
 }
 
@@ -985,6 +1111,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -997,109 +1128,112 @@ video {
   font-weight: 600;
 }
 
-.text-\[rgb\(0\2c 173\2c 181\)\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 173 181 / var(--tw-text-opacity));
+.leading-loose {
+  line-height: 2;
 }
 
-.text-\[rgb\(160\2c 160\2c 255\)\] {
-  --tw-text-opacity: 1;
-  color: rgb(160 160 255 / var(--tw-text-opacity));
+.tracking-widest {
+  letter-spacing: 0.1em;
 }
 
-.text-\[rgb\(255\2c 111\2c 97\)\] {
+.text-\[rgb\(149\2c 190\2c 241\)\] {
   --tw-text-opacity: 1;
-  color: rgb(255 111 97 / var(--tw-text-opacity));
+  color: rgb(149 190 241 / var(--tw-text-opacity));
 }
 
-.text-\[rgb\(255\2c 255\2c 255\)\] {
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-neutral-50 {
+  --tw-text-opacity: 1;
+  color: rgb(250 250 250 / var(--tw-text-opacity));
+}
+
+.text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[rgb\(50\2c 205\2c 50\)\] {
-  --tw-text-opacity: 1;
-  color: rgb(50 205 50 / var(--tw-text-opacity));
+.opacity-0 {
+  opacity: 0;
 }
 
-.text-amber-500 {
-  --tw-text-opacity: 1;
-  color: rgb(245 158 11 / var(--tw-text-opacity));
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.transition-transform {
-  transition-property: transform;
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.delay-500 {
-  transition-delay: 500ms;
 }
 
 .duration-300 {
   transition-duration: 300ms;
 }
 
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.hover\:scale-105:hover {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:bg-\[rgb\(255\2c 111\2c 97\)\]:hover {
+.hover\:bg-cyan-600:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 111 97 / var(--tw-bg-opacity));
+  background-color: rgb(8 145 178 / var(--tw-bg-opacity));
 }
 
-@media (max-width: 1279px) {
-  .xl\:flex {
-    display: flex;
-  }
+.hover\:bg-slate-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
 
-  .xl\:gap-3 {
-    gap: 0.75rem;
-  }
+.hover\:text-blue-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
+.hover\:opacity-75:hover {
+  opacity: 0.75;
 }
 
 @media (max-width: 1023px) {
-  .lg\:mt-32 {
-    margin-top: 8rem;
-  }
-
-  .lg\:hidden {
-    display: none;
+  .lg\:h-screen {
+    height: 100vh;
   }
 
   .lg\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .lg\:gap-x-1 {
-    -moz-column-gap: 0.25rem;
-         column-gap: 0.25rem;
+  .lg\:grid-rows-1 {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
   }
 
-  .lg\:text-center {
-    text-align: center;
+  .lg\:place-items-start {
+    place-items: start;
+  }
+
+  .lg\:place-items-center {
+    place-items: center;
+  }
+
+  .lg\:gap-8 {
+    gap: 2rem;
   }
 }
 
 @media (max-width: 767px) {
-  .md\:mt-32 {
-    margin-top: 8rem;
-  }
-
-  .md\:hidden {
-    display: none;
+  .md\:w-\[25rem\] {
+    width: 25rem;
   }
 
   .md\:grid-cols-1 {
@@ -1110,34 +1244,26 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .md\:justify-start {
-    justify-content: flex-start;
+  .md\:grid-rows-1 {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
   }
 
-  .md\:gap-2 {
-    gap: 0.5rem;
+  .md\:place-items-start {
+    place-items: start;
   }
 
-  .md\:text-center {
-    text-align: center;
+  .md\:gap-10 {
+    gap: 2.5rem;
   }
 }
 
 @media (max-width: 639px) {
-  .sm\:m-0 {
-    margin: 0px;
-  }
-
-  .sm\:mt-32 {
-    margin-top: 8rem;
-  }
-
-  .sm\:flex {
-    display: flex;
-  }
-
   .sm\:hidden {
     display: none;
+  }
+
+  .sm\:h-96 {
+    height: 24rem;
   }
 
   .sm\:grid-cols-1 {
@@ -1148,31 +1274,43 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .sm\:flex-col {
-    flex-direction: column;
+  .sm\:grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
 
-  .sm\:justify-start {
-    justify-content: flex-start;
+  .sm\:gap-10 {
+    gap: 2.5rem;
   }
 
-  .sm\:gap-2 {
-    gap: 0.5rem;
+  .sm\:gap-16 {
+    gap: 4rem;
   }
 
-  .sm\:pl-0 {
-    padding-left: 0px;
+  .sm\:gap-4 {
+    gap: 1rem;
+  }
+
+  .sm\:gap-40 {
+    gap: 10rem;
+  }
+
+  .sm\:gap-8 {
+    gap: 2rem;
+  }
+
+  .sm\:pl-10 {
+    padding-left: 2.5rem;
   }
 
   .sm\:pl-8 {
     padding-left: 2rem;
   }
 
-  .sm\:pr-8 {
-    padding-right: 2rem;
+  .sm\:pr-10 {
+    padding-right: 2.5rem;
   }
 
-  .sm\:text-center {
-    text-align: center;
+  .sm\:pr-8 {
+    padding-right: 2rem;
   }
 }
